2013-10-15  Charlie Zender  <zender@uci.edu>

	* Add CDL tags <group>, isUnlimited, <values>. XML dumping is mostly complete.

2013-10-14 Pedro Vicente  <pvicente@uci.edu>

	* ncrename: Add regressions #1, #2

2013-10-12  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.7 release procedure:
 	Changes since nco-4_3_6: --mrd, --hdf4
	cd ~/nco;cvs tag -d nco-4_3_7;cvs tag -d nco-4_3_7-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.7 release"
	cvs tag -c nco-4_3_7;cvs tag -c nco-4_3_7-1

2013-10-10  Charlie Zender  <zender@uci.edu>

	* Document -m -M -H

	* Treat PRN_VAR_DATA as CPY_VAR_DATA in ncks in.nc out.nc

	* Treat PRN_[GLB,VAR]_METADATA as CPY_[GLB,VAR]_METADATA in ncks in.nc out.nc

2013-10-09  Charlie Zender  <zender@uci.edu>

	* Document HDF4, --hdf4 switch

	* Add ncecat regression test of concatenating variables with different IDs

	* Re-add nco_var_mtd_refresh() to ncecat main loop

	* Fix cppcheck error using sng_val_sng as sprintf() parameter and destination

2013-10-08  Charlie Zender  <zender@uci.edu>

	* Clear garbage from stdin with safe method, not fflush(stdin)

	* Close fp_in file resource for MFOs reading fl_in lists from files

	* Received cppcheck static analysis check from dcb314
	Fixed three fprintf() formatting problems, one resource leak, one
	undefined behavior, one misuse of C++ vector .empty(), one
	potential NULL-deference.

2013-10-06  Charlie Zender  <zender@uci.edu>

	* Too many special cases so copy Unidata escaped_name() list

	* Fix ncpdq regression failures caused by --hdf being interpreted
	as --hdf4 (a new option) not --hdf_upk (the intended option).

	* CDL-mode prints CDL-compatible group/variable/dimension/attribute names
	Special characters in these names are now backslash-protected

2013-10-05  Charlie Zender  <zender@uci.edu>

	* Wrote nm2sng_cdl() to CDL-ize variable/dimension/attribute names

	* ncrename and ncatted do not work on HDF4 files because they
	attempt to modify the file on disk. netCDF4 cannot directly modify