@@ -1,6 +1,6 @@
 package NCO_rgr;
 
-# $Header: /data/zender/nco_20150216/nco/bm/NCO_rgr.pm,v 1.343 2013-10-15 05:38:50 pvicente Exp $
+# $Header: /data/zender/nco_20150216/nco/bm/NCO_rgr.pm,v 1.344 2013-10-15 23:11:53 pvicente Exp $
 
 # Purpose: All REGRESSION tests for NCO operators
 # BENCHMARKS are coded in "NCO_benchmarks.pm"
@@ -4246,6 +4246,20 @@ print "\n";
 	$tst_cmd[1]="ncks %tmp_fl_00% | grep 'History global attribute'";
     $dsc_sng="(Groups) Relative rename history to new_history";
     $tst_cmd[2]="Global attribute 3: new_history, size = 26 NC_CHAR, value = History global attribute.";
+    $tst_cmd[3]="SS_OK";
+    NCO_bm::tst_run(\@tst_cmd);
+    @tst_cmd=(); # really reset array.	
+
+#ncrename #3
+#ncrename -O -a /g1@history,new_history in_grp.nc out.nc
+#ncks -g g1 out.nc | grep 'Group attribute 0: new_history'  
+# absolute rename /g1/history group/global att to /g1/new_history
+# NB: use escape in '/g1\@history,new_history'
+    
+    $tst_cmd[0]="ncrename -O $fl_fmt $nco_D_flg -a '/g1\@history,new_history' $in_pth_arg in_grp.nc %tmp_fl_00%";
+	$tst_cmd[1]="ncks %tmp_fl_00% | grep 'Group attribute 0: new_history'";
+    $dsc_sng="(Groups) Absolute rename /g1/history group/global att to /g1/new_history";
+    $tst_cmd[2]="Group attribute 0: new_history, size = 25 NC_CHAR, value = History group attribute.";
     $tst_cmd[3]="SS_OK";
     NCO_bm::tst_run(\@tst_cmd);
     @tst_cmd=(); # really reset array.		
